Enhanced documentation and UI improvements: - Updated README with better formatting and clarity - Added CONTRIBUTING guidelines - Improved browser UI with favorites support - Enhanced credentials dialog - Added new icons and layouts - Updated string resources

--- a/WebViewBrowser/app/build.gradle
+++ b/WebViewBrowser/app/build.gradle
@@ -5,7 +5,7 @@ android {
     
     defaultConfig {
         applicationId "com.noctusoft.webviewbrowser"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 33
         versionCode 1
         versionName "1.0"
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.core:core:1.9.0'
     implementation 'androidx.webkit:webkit:1.6.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     
     // Room components for history storage
     implementation 'androidx.room:room-runtime:2.4.3'
