Fix iOS 14.0 compatibility issues and restore CocoaPods configuration
- Add iOS 14.0 availability checks for cell configuration APIs in HistoryListViewController
- Create and configure Podfile with all required dependencies
- Update README.md with recent changes
- Fix WebKit sandbox synchronization issue

--- a/WebViewBrowser/app/src/main/AndroidManifest.xml
+++ b/WebViewBrowser/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <!-- Internet permission required for WebView -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -15,6 +17,16 @@
         android:theme="@style/Theme.WebViewBrowser"
         android:usesCleartextTraffic="true">
         
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.noctusoft.webviewbrowser.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".BrowserActivity"
             android:exported="true"
