Add Xcode project files and update .gitignore to include them

--- a/WebKitBrowser/.gitignore
+++ b/WebKitBrowser/.gitignore
@@ -89,8 +89,9 @@ Icon
 ._*
 
 # XcodeGen
-*.xcodeproj
-*.xcworkspace
+# Files below are now tracked in git
+# *.xcodeproj
+# *.xcworkspace
 
 # SwiftLint
 .swiftlint-report.json
